feat: update prometheus
Signed-off-by: Avish Jha <avish.j@protonmail.com>

--- a/data/prometheus/config/prometheus.yml
+++ b/data/prometheus/config/prometheus.yml
@@ -1,26 +1,24 @@
-# prometheus/config/prometheus.yml
+# devops-stack/data/prometheus/config/prometheus.yml
 
 global:
-  scrape_interval: 15s # How frequently to scrape targets by default.
-  evaluation_interval: 15s # How frequently to evaluate rules.
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
-  # Scrape Prometheus itself
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090'] # Prometheus server runs on 9090 internally
+      - targets: ['prometheus:9090'] # Use service name and internal port
 
-  # --- Add other scrape jobs below ---
-  # Example: Scraping GitLab Metrics (Requires GitLab configuration adjustments)
-  # GitLab CE bundles exporters. You might need to enable/configure them in gitlab.rb
-  # and potentially allowlist Prometheus's IP in GitLab settings.
-  # Consult GitLab documentation for enabling /-/metrics endpoint.
-  #
+  # Add other scrape configs as needed (GitLab, SonarQube, Jenkins...)
   # - job_name: 'gitlab'
-  #   metrics_path: '/-/metrics' # Common path for GitLab metrics
-  #   scheme: http # Or https if GitLab is configured for it internally
+  #   metrics_path: '/-/metrics'
   #   static_configs:
-  #     # Use the service name defined in docker-compose.yml and the internal port
-  #     - targets: ['gitlab:80'] # Assuming metrics are exposed on the main port
-  #     # Or maybe a specific exporter port if configured differently:
-  #     # - targets: ['gitlab:9168'] # Example: gitlab-exporter specific port
+  #     - targets: ['gitlab:80']
+  # - job_name: 'sonarqube'
+  #   metrics_path: '/api/prometheus/metrics'
+  #   static_configs:
+  #     - targets: ['sonarqube:9000']
+  # - job_name: 'jenkins'
+  #   metrics_path: '/prometheus' # Requires Prometheus Metrics Plugin in Jenkins
+  #   static_configs:
+  #     - targets: ['jenkins:8080']
