--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,26 +88,15 @@ services:
       - devops-spring
 
   zap:
-    image: owasp/zap2docker-stable
+    image: zaproxy/zap-stable:latest
     container_name: zap
     restart: always
-    ports:
-      - "8090:8080"
-    volumes:
-      - ./data/zap:/home/zap/.ZAP
-    command: >
-      zap.sh -daemon -port 8080 -host 0.0.0.0
-      -config api.disablekey=true
-      -config api.addrs.addr.name=.*
-      -config api.addrs.addr.regex=true
-      -config replacer.full_list\(0\).description=authHeader
-      -config replacer.full_list\(0\).enabled=false
-      -config replacer.full_list\(0\).matchtype=REQ_HEADER
-      -config replacer.full_list\(0\).matchstr=Authorization
-      -config replacer.full_list\(0\).regex=false
-      -config replacer.full_list\(0\).replacement=
     networks:
       - devops-spring
+    ports:
+      - "8080:8080"
+    command:
+      - '--zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true'
 
 networks:
   devops-spring:
