--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,8 +95,11 @@ services:
       - devops-spring
     ports:
       - "8080:8080"
-    command:
-      - '--zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true'
+    command: >
+      zap.sh -daemon -port 8080 -host 0.0.0.0
+      -config api.disablekey=true
+      -config api.addrs.addr.name=.*
+      -config api.addrs.addr.regex=true
 
 networks:
   devops-spring:
