--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,10 @@ services:
       -config api.disablekey=true
       -config api.addrs.addr.name=.*
       -config api.addrs.addr.regex=true
+    deploy:
+      resources:
+        limits:
+          memory: 3G
 
 networks:
   devops-spring:
