feat: add back the volume for zap
Signed-off-by: Avish Jha <avish.j@protonmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,8 @@ services:
       - devops-spring
     ports:
       - "8082:8080"
+    volumes:
+      - ./data/zap:/home/zap/.ZAP
     command: >
       zap.sh -daemon -port 8080 -host 0.0.0.0
       -config api.disablekey=true
