--- a/pipeline-server/docker-compose.yml
+++ b/pipeline-server/docker-compose.yml
@@ -16,9 +16,9 @@ services:
 #       - "8443:443"
 #       - "2222:22"
 #     volumes:
-#       - ./data/gitlab/config:/etc/gitlab
-#       - ./data/gitlab/logs:/var/log/gitlab
-#       - ./data/gitlab/data:/var/opt/gitlab
+#       - ./pipeline-server/data/gitlab/config:/etc/gitlab
+#       - ./pipeline-server/data/gitlab/logs:/var/log/gitlab
+#       - ./pipeline-server/data/gitlab/data:/var/opt/gitlab
 #     shm_size: '256m'
 #     networks:
 #       - devops-spring
@@ -30,8 +30,8 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./data/prometheus/config:/etc/prometheus 
-      - ./data/prometheus/data:/prometheus      
+      - ./pipeline-server/data/prometheus/config:/etc/prometheus 
+      - ./pipeline-server/data/prometheus/data:/prometheus      
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'             
@@ -48,9 +48,9 @@ services:
     ports:
       - "9002:9000"
     volumes:
-      - ./data/sonarqube/data:/opt/sonarqube/data
-      - ./data/sonarqube/logs:/opt/sonarqube/logs
-      - ./data/sonarqube/extensions:/opt/sonarqube/extensions
+      - ./pipeline-server/data/sonarqube/data:/opt/sonarqube/data
+      - ./pipeline-server/data/sonarqube/logs:/opt/sonarqube/logs
+      - ./pipeline-server/data/sonarqube/extensions:/opt/sonarqube/extensions
     networks:
       - devops-spring
 
@@ -61,7 +61,7 @@ services:
     ports:
       - "3001:3000"
     volumes:
-      - ./data/grafana:/var/lib/grafana 
+      - ./pipeline-server/data/grafana:/var/lib/grafana 
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     networks:
@@ -77,7 +77,7 @@ services:
       - "8081:8080"
       - "50001:50000"
     volumes:
-      - ./data/jenkins:/var/jenkins_home 
+      - ./pipeline-server/data/jenkins:/var/jenkins_home 
     environment:
       # - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
       - JENKINS_OPTS="--prefix=/jenkins"
@@ -95,7 +95,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
-      - ./data/zap:/home/zap/.ZAP
+      - ./pipeline-server/data/zap:/home/zap/.ZAP
     command: >
       zap.sh -daemon -port 8080 -host 0.0.0.0
       -config api.disablekey=true
