--- a/pipeline-server/docker-compose.yml
+++ b/pipeline-server/docker-compose.yml
@@ -69,21 +69,6 @@ services:
     depends_on:
       - prometheus
 
-  jenkins:
-    image: jenkins/jenkins:lts-jdk17
-    container_name: jenkins
-    restart: always
-    ports:
-      - "8081:8080"
-      - "50001:50000"
-    volumes:
-      - ./pipeline-server/data/jenkins:/var/jenkins_home 
-    environment:
-      # - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
-      - JENKINS_OPTS="--prefix=/jenkins"
-    networks:
-      - devops-spring
-
   zap:
     image: zaproxy/zap-stable:latest
     container_name: zap
@@ -106,6 +91,36 @@ services:
         limits:
           memory: 3G
 
+
+
+  jenkins:
+    privileged: true
+    build:
+      context: ./../jenkinsfiles
+      dockerfile: jenkins.dockerfile
+    container_name: jenkins
+    restart: no
+    ports:
+      - "8081:8080"
+      - "50001:50000"
+    volumes:
+      # - jenkins_data:/var/jenkins_home 
+      # - ./data/jenkins:/var/jenkins_home
+      - ./data/jenkins:/var/jenkins_home 
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      # - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
+      - JENKINS_OPTS="--prefix=/jenkins"
+    networks:
+      - devops-spring
+    
+
+  
+
 networks:
   devops-spring:
     driver: bridge
+
+
+volumes:
+  jenkins_data: {}
