fix: path and port
Signed-off-by: Avish Jha <avish.j@protonmail.com>

--- a/jenkinsfiles/jenkins-casc.yaml
+++ b/jenkinsfiles/jenkins-casc.yaml
@@ -38,7 +38,7 @@ unclassified:
   prometheusConfiguration:
     collectingMetricsPeriodInSeconds: 15
     defaultNamespace: "jenkins"
-    path: "/prometheus"
+    path: "prometheus"
     useAuthenticatedEndpoint: false
 
   # gitHubConfiguration:
