--- a/pipeline-server/docker-compose.yml
+++ b/pipeline-server/docker-compose.yml
@@ -38,10 +38,12 @@ services:
     ports:
       - "3001:3000"
     volumes:
-      - ./data/grafana:/var/lib/grafana 
+      - ./data/grafana:/var/lib/grafana
       - ./data/grafana/datasources:/etc/grafana/provisioning/datasources
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
+      - GF_SECURITY_DISABLE_INITIAL_ADMIN_PASSWORD_CHANGE=true
     networks:
       - devops-spring
     depends_on:
