--- a/pipeline-server/docker-compose.yml
+++ b/pipeline-server/docker-compose.yml
@@ -47,8 +47,8 @@ services:
       - GF_METRICS_ENABLED=true
       - GF_METRICS_BASIC_AUTH_USERNAME=prometheus
       - GF_METRICS_BASIC_AUTH_PASSWORD=password
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+      # - GF_AUTH_ANONYMOUS_ENABLED=true
+      # - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
     networks:
       - devops-spring
     depends_on:
