feat: disable anon read for jenkins
Signed-off-by: Avish Jha <avish.j@protonmail.com>

--- a/jenkinsfiles/jenkins-casc.yaml
+++ b/jenkinsfiles/jenkins-casc.yaml
@@ -24,7 +24,7 @@ jenkins:
           password: "password"
   authorizationStrategy:
     loggedInUsersCanDoAnything:
-        allowAnonymousRead: true
+        allowAnonymousRead: false
 
 unclassified:
   location:
